--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'edu.pucmm'
-version '2.0-SNAPSHOT'
+version '3.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'application'
@@ -28,6 +28,10 @@ dependencies {
     // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.15'
     compile 'org.controlsfx:controlsfx:8.40.12'
+    //
+    // https://mvnrepository.com/artifact/org.apache.activemq/activemq-client
+    compile group: 'org.apache.activemq', name: 'activemq-client', version: '5.15.8'
+
 
 }
 
